crates/assembly/src/snapshots/miden_assembly__tests__program_with_reexported_proc_in_another_library.snap
---
source: crates/assembly/src/tests.rs
assertion_line: 2665
expression: program
---
begin
    join
        join
            basic_block
                push(2147483648)
                push(4294967294)
                mstore
                drop
                push(4)
                push(3)
                noop
                noop
                noop
                noop
            end
            external.0x83e30a4ef2bcf0f24f82d270800285b22e84264cc1aabfe06b92e9152da77644
        end
        external.0x3bbc1238536465cc1794f17409d6cb2ade04ef07edcdb8ee0a9785698113e932
    end
end
