crates/assembly/src/snapshots/miden_assembly__tests__push_word_slice.snap
---
source: crates/assembly/src/tests.rs
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        push(4)
        push(3)
        push(2)
        push(12)
        noop
        noop
        push(11)
        push(9)
        push(8)
        push(7)
        push(6)
        noop
        noop
        noop
    end
end
