crates/assembly/src/snapshots/miden_assembly__tests__repeat_basic_blocks_merged.snap
---
source: crates/assembly/src/tests.rs
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        mul
        add
        add
        add
        add
        add
    end
end
