crates/assembly/src/snapshots/miden_assembly__tests__repeat_dynamic_iteration_count.snap
---
source: crates/assembly/src/tests.rs
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        add
        add
        add
        add
        add
        noop
    end
end
