crates/assembly/src/snapshots/miden_assembly__tests__simple_constant.snap
---
source: crates/assembly/src/tests.rs
assertion_line: 692
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        asmOp(push.7, 1)
        push(7)
        noop
    end
end
