crates/assembly/src/snapshots/miden_assembly__tests__simple_instructions-2.snap
---
source: crates/assembly/src/tests.rs
assertion_line: 75
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        asmOp(push.10, 1)
        push(10)
        asmOp(push.50, 1)
        push(50)
        asmOp(push.2, 1)
        push(2)
        asmOp(u32wrapping_madd, 2)
        u32madd
        asmOp(u32wrapping_madd, 2)
        drop
        noop
        noop
    end
end
