crates/assembly/src/snapshots/miden_assembly__tests__simple_instructions-3.snap
---
source: crates/assembly/src/tests.rs
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        push(10)
        push(50)
        push(2)
        u32add3
        swap
        drop
        noop
    end
end
