crates/assembly/src/snapshots/miden_assembly__tests__simple_instructions.snap
---
source: crates/assembly/src/tests.rs
assertion_line: 71
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        asmOp(push.0, 1)
        pad
        asmOp(assertz, 2)
        eqz
        asmOp(assertz, 2)
        assert(0)
        noop
    end
end
