crates/assembly/src/snapshots/miden_assembly__tests__single_basic_block.snap
---
source: crates/assembly/src/tests.rs
assertion_line: 162
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        asmOp(push.1, 2)
        pad
        asmOp(push.1, 2)
        incr
        asmOp(push.2, 1)
        push(2)
        asmOp(add, 1)
        add
    end
end
