crates/assembly/src/snapshots/miden_assembly__tests__u32assert_with_code.snap
---
source: crates/assembly/src/tests.rs
assertion_line: 1953
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        asmOp(u32assert, 3)
        pad
        asmOp(u32assert, 3)
        u32assert2(0)
        asmOp(u32assert, 3)
        drop
        asmOp(u32assert.err="Oh no", 3)
        pad
        asmOp(u32assert.err="Oh no", 3)
        u32assert2(15491226248792286710)
        asmOp(u32assert.err="Oh no", 3)
        drop
        asmOp(u32assert.err="Oh no", 3)
        pad
        asmOp(u32assert.err="Oh no", 3)
        u32assert2(15491226248792286710)
        asmOp(u32assert.err="Oh no", 3)
        drop
    end
end
